--- a/dashboard/track_dashboard.html
+++ b/dashboard/track_dashboard.html
@@ -349,7 +349,7 @@
     <div class="header">
         <div>
             <h1>🏁 GR Cup Coaching Dashboard</h1>
-            <div style="font-size: 0.8em; opacity: 0.8;">Version 2.5 - Clean Professional Interface</div>
+            <div style="font-size: 0.8em; opacity: 0.8;">Version 2.5</div>
         </div>
         <div class="session-info">
             <div><strong>Current Track:</strong> <span id="currentTrackName">Barber Motorsports Park</span></div>
